# galil-seiferas

./: .travis.yml  Cargo.toml  LICENSE-MIT  README-crates.io.md  README.rst
fuzz/: Cargo.toml  all.sh  dict  run1.sh  run2.sh  run3.sh  run4.sh  run5_known_substring.sh  run_decomposition.sh  run_known_substring_debug.sh  run_known_substring_i16.sh
fuzz/fuzz_targets/: debug_asserts.rs  decomposition.rs  fuzz_target_1.rs  fuzz_target_2.rs  fuzz_target_3.rs  known_substring.rs  known_substring_i16.rs
src/: lib.rs  test_util.rs  util.rs  zoom.rs
tests/: quick.rs
