[package]

version = "0.1.0"

name = "galil-seiferas"
license = "MIT/Apache-2.0"
authors = ["bluss"]

repository = "https://github.com/bluss/galil-seiferas"
documentation = "https://docs.rs/galil-seiferas/"

readme = "README-crates.io.md"
description = ""

keywords = []
categories = []

[dependencies]
defmac = "0.1"

[dev-dependencies]
quickcheck = { version = "0.4", default-features = false }
odds = "0.2"
macro-attr = "0.2"
newtype_derive = "0.1"
rand = "0.3.10"
matches = "0.1"

[features]

[profile.dev]
opt-level = 1
[profile.test]
opt-level = 1
[profile.bench]
debug = true

[package.metadata.docs.rs]

[package.metadata.release]
no-dev-version = true
