[package]

version = "0.1.0"

name = "galil-seiferas"
license = "MIT/Apache-2.0"
authors = ["bluss"]

repository = "https://github.com/bluss/galil-seiferas"
documentation = "https://docs.rs/galil-seiferas/"


description = "String search in constant space, linear time, for nonorderable alphabets."

keywords = ["string", "substring", "search", "pattern"]
categories = ["algorithms"]

[dependencies]
defmac = "0.1"
unchecked-index = "0.2"

[dev-dependencies]
quickcheck = { version = "0.4", default-features = false }
odds = "0.2"
macro-attr = "0.2"
newtype_derive = "0.1"
matches = "0.1"

[features]
benchmarks = []
trace = []

[profile.dev]
opt-level = 1
[profile.test]
opt-level = 1
[profile.bench]
debug = true

[package.metadata.docs.rs]

[package.metadata.release]
no-dev-version = true
